src/App/Main/styles.module.css
main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.logo {
  width: 272px;
}

.input {
  margin-top: 30px;
  width: 500px;
  height: 50px;
  border: 1px solid #dfe1e5;
  border-radius: 24px;
  outline: none;
  padding: 0 35px;
}

.buttons {
  margin-top: 30px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.button {
  background-color: #f2f2f2;
  border: none;
  border-radius: 4px;
  color: #5f6368;
  height: 36px;
  padding: 0 15px;
  cursor: pointer;
}

.button:nth-child(2) {
  margin-left: 20px;
}

.button:last-child {
  margin-left: 15px;
}

.button:hover {
  background-color: #f8f8f8;
  border: 1px solid #c6c6c6;
  color: #222222;
  box-shadow: 0 1px 1px rgb(0, 0, 0, 0.1);
}

.text {
  font-size: 15px;
  font-family: Arial, Helvetica, sans-serif;
  color: #222222;
  margin-top: 30px;
}

.textLink {
  text-decoration: none;
  margin: 0 5px;
  color: #1a0dab;
}

.rectangle {
  height: 50px;
  width: 50px;
  background-color: #f2f2f2;
  border-radius: 4px;
  border: none;
  margin-left: 20px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  font-family: Arial, Helvetica, sans-serif;
}

.rectangle button {
  border: none;
}

.green {
  color: green;
}

.yellow {
  color: orange;
}

.red {
  color: red;
}

